--- a/project/src/main/res/layout/activity_cars.xml
+++ b/project/src/main/res/layout/activity_cars.xml
@@ -28,4 +28,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <include
+        android:id="@+id/car_checkout"
+        layout="@layout/widget_car_checkout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </com.expedia.bookings.presenter.CarsPresenter>
