--- a/project/src/airAsiaGo/res/values/themes.xml
+++ b/project/src/airAsiaGo/res/values/themes.xml
@@ -87,6 +87,7 @@
         <item name="skin_flightLoginActionBarIcon">@drawable/ic_logo_flights_aag</item>
         <item name="skin_sorryRoomsSoldOutErrorMessage">@string/error_hotel_is_now_sold_out_aag</item>
         <item name="skin_errorHotelOffersHotelServiceFailureString">@string/e3_error_hotel_offers_hotel_service_failure_aag</item>
+        <item name="skin_menuAboutWebViewActivity">@menu/menu_webview</item>
     </style>
 
     <style name="FlightTheme" parent="@style/Theme.AirAsiaGo">
