--- a/project/src/main/res/values/whitelabels.xml
+++ b/project/src/main/res/values/whitelabels.xml
@@ -288,4 +288,8 @@
     <attr name="skin_tablet_pin_detail_button_text_color" format="reference|color" />
     <attr name="skin_tablet_ab_launch_text1_base" format="reference" />
     <attr name="skin_tablet_ab_launch_text2_pin_detail" format="reference" />
+
+    <!-- Menu for AboutWebViewActivity-->
+    <attr name="skin_menuAboutWebViewActivity" format="reference" />
+
 </resources>
