--- a/project/src/main/res/layout/widget_car_progress.xml
+++ b/project/src/main/res/layout/widget_car_progress.xml
@@ -5,12 +5,10 @@
 
     <ProgressBar
         android:id="@+id/cars_progress_indicator"
+        style="@android:style/Widget.Holo.Light.ProgressBar.Large"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:indeterminate="true"
-        android:indeterminateDrawable="@drawable/progress_large_holo"
-        android:minHeight="76dp"
-        android:minWidth="76dp"
-        android:orientation="vertical" />
+        android:indeterminate="true" />
+
 </FrameLayout>
