--- a/project/src/main/res/layout/widget_car_search_params.xml
+++ b/project/src/main/res/layout/widget_car_search_params.xml
@@ -81,47 +81,31 @@
             android:layout_height="220dp"
             android:layout_gravity="bottom" />
 
-        <LinearLayout
+        <GridLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="12dp"
-            android:orientation="horizontal">
+            android:columnCount="2"
+            android:orientation="horizontal"
+            android:rowCount="2" >
 
             <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:text="@string/pick_up_time_label"
                 android:textSize="18sp" />
 
             <SeekBar
                 android:id="@+id/pickup_time_seek_bar"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="5"
+                android:layout_gravity="fill"
                 android:max="47" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="12dp"
-            android:orientation="horizontal">
 
             <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:text="@string/drop_off_time_label"
                 android:textSize="18sp" />
 
             <SeekBar
                 android:id="@+id/dropoff_time_seek_bar"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="5"
+                android:layout_gravity="fill"
                 android:max="47" />
-        </LinearLayout>
+        </GridLayout>
     </LinearLayout>
 
 </com.expedia.bookings.widget.CarSearchParamsWidget>
