--- a/project/src/main/res/layout/row_room_rate.xml
+++ b/project/src/main/res/layout/row_room_rate.xml
@@ -72,59 +72,42 @@
             android:visibility="gone"
             android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/total_price_text_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="left"
-            android:layout_below="@+id/price_text_view"
-            android:textColor="#696969"
-            android:textSize="12sp" />
     </RelativeLayout>
 
     <TextView
-        android:id="@+id/beds_text_view"
-        style="@style/rateInfoText"
+        android:id="@+id/total_price_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/room_description_text_view"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="8dp"
-        android:layout_toRightOf="@+id/price_layout"
-        android:gravity="right"
-        android:paddingBottom="3dp"
-        android:paddingTop="26dp" />
-
-    <!-- This view replaces the above beds_text_view if the row has value-adds -->
-
-    <LinearLayout
-        android:id="@+id/value_adds_layout"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
+        android:gravity="left"
         android:layout_below="@+id/price_layout"
-        android:orientation="horizontal"
-        android:visibility="gone" >
+        android:textColor="#696969"
+        android:textSize="12sp" />
 
-        <TextView
-            android:id="@+id/value_adds_text_view"
-            style="@style/rateInfoText"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
+    <TextView
+        android:id="@+id/value_adds_text_view"
+        style="@style/rateInfoText"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/total_price_text_view"
+        android:layout_toLeftOf="@+id/center"
+        android:layout_width="wrap_content"
+        android:gravity="left"
+        android:layout_height="wrap_content" />
 
-        <TextView
-            android:id="@+id/value_adds_beds_text_view"
-            style="@style/rateInfoText"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="8dp"
-            android:layout_weight="1"
-            android:gravity="right" />
-    </LinearLayout>
+    <View
+        android:id="@+id/center"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:id="@+id/value_adds_beds_text_view"
+        style="@style/rateInfoText"
+        android:layout_width="wrap_content"
+        android:layout_below="@+id/price_layout"
+        android:layout_toRightOf="@+id/center"
+        android:layout_alignParentRight="true"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="8dp"
+        android:gravity="right" />
 
 </RelativeLayout>
