--- a/project/src/main/res/xml/preferences_dev.xml
+++ b/project/src/main/res/xml/preferences_dev.xml
@@ -128,6 +128,34 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory android:title="Abacus" >
+
+        <ListPreference
+            android:entries="@array/abacus_default_choices"
+            android:entryValues="@array/abacus_default_choice_values"
+            android:defaultValue="@string/preference_abacus_default"
+            android:key="@string/preference_aa_test"
+            android:summary="Select a test group"
+            android:title="AA Abacus Test" />
+
+        <ListPreference
+            android:entries="@array/abacus_default_choices"
+            android:entryValues="@array/abacus_default_choice_values"
+            android:defaultValue="@string/preference_abacus_default"
+            android:key="@string/preference_etp_test"
+            android:summary="Select a test group"
+            android:title="ETP Pay Now vs Pay Later Default" />
+
+        <ListPreference
+            android:entries="@array/abacus_book_choices"
+            android:entryValues="@array/abacus_book_choice_values"
+            android:defaultValue="@string/preference_abacus_default"
+            android:key="@string/preference_book_above_fold"
+            android:summary="Select a test group"
+            android:title="Book Above the Fold and Book Language Test" />
+
+    </PreferenceCategory>
+
     <PreferenceCategory android:title="Push" >
 
         <com.expedia.bookings.widget.GCMIdDialogPreference
