--- a/project/src/main/res/layout/cars_results_presenter.xml
+++ b/project/src/main/res/layout/cars_results_presenter.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.expedia.bookings.presenter.CarsResultsPresenter xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="16dp"
@@ -25,8 +26,7 @@
 
     </com.expedia.bookings.widget.CarCategoryListWidget>
 
-    <com.expedia.bookings.widget.CarCategoryDetailsWidget xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <com.expedia.bookings.widget.CarCategoryDetailsWidget
         android:id="@+id/details"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
