--- a/project/src/main/res/layout/fragment_tablet_launch.xml
+++ b/project/src/main/res/layout/fragment_tablet_launch.xml
@@ -17,44 +17,8 @@
         android:layout_gravity="top"
         android:background="@drawable/top_gradient_launch"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="bottom|center_horizontal"
-        android:layout_gravity="bottom"
-        android:orientation="vertical"
-        android:background="@drawable/bg_tablet_bottom_fade">
+    <include layout="@layout/tablet_launch_collections_search_layout" />
 
-        <LinearLayout
-            android:id="@+id/fake_search_bar_container"
-            android:layout_width="@dimen/tablet_search_width"
-            android:layout_height="@dimen/tablet_search_header_height"
-            android:background="@drawable/bg_search_box"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/fake_waypoint_edit_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/search_all_hint"
-                android:background="@null"
-                android:paddingLeft="16dp"
-                android:drawableLeft="@drawable/ic_searchbox"
-                android:drawablePadding="8dp"
-                android:singleLine="true"
-                android:textSize="18sp"
-                app:textStyle="light"/>
-        </LinearLayout>
-
-        <FrameLayout
-            android:id="@+id/tiles_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="@dimen/extra_navigation_bar_padding"/>
-
-    </LinearLayout>
 
     <FrameLayout
         android:id="@+id/waypoint_container"
