--- a/project/src/travelocity/res/values/colors.xml
+++ b/project/src/travelocity/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="login_text_hotels">#FFFFFF</color>
     <color name="login_text_flight">#FFFFFF</color>
     <color name="coupon_success_message_color_tvly">#7baed4</color>
-    <color name="collection_overlay_color">#4da0d1</color>
+    <color name="collection_overlay_color">#56a1d5</color>
     <color name="tablet_book_button_text_color_travelocity">#57B3FF</color>
     <color name="hotel_room_rate_select_room_button_tvly">#53A0D3</color>
     <color name="hotel_room_rate_select_room_button_pressed_tvly">#004E93</color>
@@ -20,4 +20,5 @@
     <color name="tablet_search_result_error_button_tvly">#004E93</color>
     <color name="tablet_search_result_error_button_pressed_tvly">#D1EAFF</color>
     <color name="tablet_results_search_blue_tvly">#608405</color>
+    <color name="launch_pin_detail_button_text_travelocity">#D1EAFF</color>
 </resources>
