Reskin tablet home screen for travelocity - Action bar text set to Travelocity instead of 'Explore' and 'Discover' - Collection selected tint changed to travelocity green. - Moving search bar to top of the screen. - Action bar logo changed to colored one. - Selected pin detail image changed to square instead of round. - Explore now button changed to have travelocity green background.

--- a/project/src/main/res/values/whitelabels.xml
+++ b/project/src/main/res/values/whitelabels.xml
@@ -277,4 +277,9 @@
     <attr name="skin_tablet_hotel_confirmation_placeholder" format="reference" />
     <attr name="skin_tablet_flight_confirmation_placeholder" format="reference" />
 
+    <attr name="skin_tablet_pin_detail_image_size" format="reference" />
+    <attr name="skin_tablet_pin_detail_button_background" format="reference" />
+    <attr name="skin_tablet_pin_detail_button_text_color" format="reference|color" />
+    <attr name="skin_tablet_ab_launch_text1_base" format="reference" />
+    <attr name="skin_tablet_ab_launch_text2_pin_detail" format="reference" />
 </resources>
