--- a/project/src/main/res/layout-sw600dp/fragment_cvv_entry.xml
+++ b/project/src/main/res/layout-sw600dp/fragment_cvv_entry.xml
@@ -96,7 +96,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|right"
                 android:layout_marginRight="10dp"
-                android:background="@drawable/div_cvv"
+                android:background="?attr/skin_cvvDivDrawable"
                 android:freezesText="true"
                 android:gravity="center_horizontal"
                 android:maxLength="4"
