--- a/project/src/main/res/xml/preferences_dev.xml
+++ b/project/src/main/res/xml/preferences_dev.xml
@@ -154,6 +154,14 @@
             android:summary="Select a test group"
             android:title="Book Above the Fold and Book Language Test" />
 
+        <ListPreference
+            android:entries="@array/abacus_default_choices"
+            android:entryValues="@array/abacus_default_choice_values"
+            android:defaultValue="@string/preference_abacus_default"
+            android:key="@string/preference_hotel_free_cancellation"
+            android:summary="Select a test group"
+            android:title="Hotel Info Site Free Cancellation" />
+
     </PreferenceCategory>
 
     <PreferenceCategory android:title="Push" >
