--- a/project/src/main/res/values/ids.xml
+++ b/project/src/main/res/values/ids.xml
@@ -66,6 +66,8 @@
     <item name="app_support_url_aag" type="string"/>
     <!-- App Support URL for VSC -->
     <item name="app_support_url_vsc" type="string"/>
+    <!-- App Support URL for Travelocity -->
+    <item name="app_support_url_tvly" type="string"/>
     <!-- adding vsc crossSell text and link to avoid errors in Expedia app compilation -->
     <item name="share_template_long_ad_vsc" type="string"/>
     <item name="share_template_long_ad_tvly" type="string"/>
