--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -205,4 +205,16 @@
 
     <color name="placeholder_background_color">#21394E</color>
 
+    <!-- Cars colors -->
+    <color name="cars_primary_color">#7E4569</color>
+    <color name="cars_secondary_color">#915B7C</color>
+    <color name="cars_tooltip_color">#AF89A1</color>
+    <color name="cars_slider_progress_color">#50FFFFFF</color>
+    <color name="cars_dropdown_disabled_stroke">#C3C3C3</color>
+    <color name="cars_dropdown_background_color">#ECECEC</color>
+    <color name="cars_actionbar_text_color">#5C5C5C</color>
+    <color name="cars_invalid_days_calendar">#A9A9A9</color>
+    <color name="cars_valid_days_calendar">#3A3A3A</color>
+    <color name="cars_calendar_week_color">#888888</color>
+
 </resources>
