--- a/project/src/main/res/values/styles.xml
+++ b/project/src/main/res/values/styles.xml
@@ -1075,4 +1075,17 @@
         <item name="android:singleLine">true</item>
     </style>
 
+    <style name="CarAutocomplete">
+        <item name="android:background">@drawable/cars_autocomplete_background_selector</item>
+        <item name="android:layout_height">43dp</item>
+        <item name="android:drawablePadding">12dp</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingRight">5dp</item>
+        <item name="android:textColorHint">@color/cars_primary_color</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/cars_primary_color</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:ellipsize">end</item>
+    </style>
+
 </resources>
