--- a/project/src/main/res/layout/fragment_tablet_hotel_reviews.xml
+++ b/project/src/main/res/layout/fragment_tablet_hotel_reviews.xml
@@ -169,7 +169,7 @@
                 android:drawablePadding="8dp"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:text="@string/sorry_rooms_sold_out"
+                android:text="?attr/skin_sorryRoomsSoldOut"
                 android:textColor="#5e6b7a"
                 android:textSize="16dp"
                 app:textStyle="light"
